--- a/src/React.Sample.Mvc4/Views/Home/Index.cshtml
+++ b/src/React.Sample.Mvc4/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using System.Web.Optimization
+@using System.Web.Optimization
 @model React.Sample.Mvc4.ViewModels.IndexViewModel
 <!DOCTYPE html>
 <html>
@@ -15,6 +15,8 @@
 	
 	<!-- Render the component server-side, passing initial props -->
 	@Html.React("CommentsBox", new { initialComments = Model.Comments, page = Model.Page })
+	@Html.React("HelloWorld", new { name = "Charlie" })
+	@*@Html.React("HelloWorldES6", new { name = "Elsa" })*@
 		
 	<!-- Load all required scripts (React + the site's scripts) -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js"></script>
